Modyfing the model and repository